--- a/src/app/Componentes/turnos-alta/turnos-alta.component.html
+++ b/src/app/Componentes/turnos-alta/turnos-alta.component.html
@@ -156,7 +156,7 @@
                         <ion-icon class="icon" name="arrow-round-forward"></ion-icon>
                         Elegir
                       </button> -->
-                      <button type="button"   (click)="viewDetails(item)"  style="  color: orangered;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+                      <button type="button"   (click)="viewDetails(item)"  style="  color: gray;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
                       mdbWavesEffect><ion-icon class="icon" name="arrow-round-forward"></ion-icon> ELEGIR
                      </button>
                     
@@ -180,15 +180,19 @@
       <!-- <button mat-raised-button class="submit-button" color="primary" type="submit"
        >Crear</button> -->
 
-       <button type="submit"  mat-button   style="  color: white;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+       <!-- <button type="submit"  mat-button   style="  color: white;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
        mdbWavesEffect>
-       <ion-icon class="icon" name="md-checkmark-circle" ></ion-icon>CREAR</button>
+       <ion-icon class="icon" name="md-checkmark-circle" ></ion-icon>CREAR</button> -->
     </div>
 
-    <button type="button"   (click)="datosCliente()"  style="  color: orangered;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
-    mdbWavesEffect><ion-icon class="icon" name="arrow-round-forward"></ion-icon> Datos Cliente
+    <button type="submit"    style="  color: white;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+    mdbWavesEffect><ion-icon class="icon" name="md-checkmark-circle" ></ion-icon> Crear
 </button>
 
+
+<button type="button"   (click)="usuarioes()"   style="  color: white;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+mdbWavesEffect><ion-icon class="icon" name="md-checkmark-circle" ></ion-icon> usuario
+</button>
   </div>
 
 
