--- a/src/app/Componentes/ver-turnos-paciente/ver-turnos-paciente.component.html
+++ b/src/app/Componentes/ver-turnos-paciente/ver-turnos-paciente.component.html
@@ -10,7 +10,7 @@
     <div *ngFor="let item of turnos" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="row">
         <div class="col col-md-2 image-col">
-          <img class="image" [src]="item.payload.doc.data().avatar">
+          <!-- <img class="image" [src]="item.payload.doc.data().avatar"> -->
         </div>
         <div class="col col-md-8 text-col">
             <nav aria-label="breadcrumb">
@@ -41,14 +41,14 @@
                 
               </div>
           <h5 class="mb-1"> Dias Turno</h5>
-          <small>{{item.payload.doc.data().DiaTurno}}</small>
+          <!-- <small>{{item.payload.doc.data().DiaTurno}}</small> -->
           <h5 class="mb-1">Horarios</h5>
 
-          <small>{{item.payload.doc.data().horario}}</small>
+          <!-- <small>{{item.payload.doc.data().horario}}</small> -->
     
         </div>
         <div class="col col-md-8 text-col">
-          <h5 class="mb-1">{{item.payload.doc.data().name}} {{item.payload.doc.data().surname}}</h5>
+          <!-- <h5 class="mb-1">{{item.payload.doc.data().name}} {{item.payload.doc.data().surname}}</h5> -->
        
         </div>
         <div class="col col-md-2 actions-col">
