--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -205,12 +205,12 @@
 						<li class="nav-item">
 								<a class="nav-link active" routerLink="verturnospaciente">Proximos Turnos </a>
 								</li>
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 						  <a class="nav-link active" routerLink="Habilitarturnos">Marcar Asistencia</a>
-						</li>
-						<li class="nav-item">
+						</li> -->
+						<!-- <li class="nav-item">
 							<a class="nav-link"  routerLink="listadopacientes">Agregar Reseña</a>
-						  </li>
+						  </li> -->
 						<li class="nav-item">
 							<a class="nav-link" routerLink="/TurnosEspecialista">	<ion-icon name="add"></ion-icon>Turnos para paciente
 							</a>
