--- a/src/app/Componentes/miperfil/miperfil.component.html
+++ b/src/app/Componentes/miperfil/miperfil.component.html
@@ -1,54 +1,57 @@
-<!-- <div class="edit-page">
-        <nav aria-label="breadcrumb">
+
+  <div class="list-group users-list">
+      <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item active" aria-current="page">Mi PERFIL </li>
+            <li class="breadcrumb-item active" aria-current="page"> Mi Historial Clinico</li>
           </ol>
         </nav>
-        <div class="page-content">
-          <div class="row">
-    
-            <div class="col col-md-8">
-      
-              <form class="edit-form" [formGroup]="exampleForm" novalidate (ngSubmit)="onSubmit(exampleForm.value)">
-      
-                <div class="form-group">
-                  <mat-form-field class="input-style">
-                    <input matInput placeholder="Nombre" class="form-control" formControlName="name">
-                  </mat-form-field>
-                  <ng-container *ngFor="let validation of validation_messages.name">
-                    <mat-error *ngIf="exampleForm.get('name').hasError(validation.type) && (exampleForm.get('name').dirty || exampleForm.get('name').touched)">{{validation.message}}</mat-error>
-                  </ng-container>
-                </div>
-      
-                <div class="form-group">
-                  <mat-form-field class="input-style">
-                    <input matInput placeholder="Apellido" class="form-control" formControlName="surname">
-                  </mat-form-field>
-                  <ng-container *ngFor="let validation of validation_messages.surname">
-                    <mat-error *ngIf="exampleForm.get('surname').hasError(validation.type) && (exampleForm.get('surname').dirty || exampleForm.get('surname').touched)">{{validation.message}}</mat-error>
-                  </ng-container>
-                </div>
-      
-                <div class="form-group">
-                  <mat-form-field class="input-style">
-                    <input matInput type="number" min="0" max="100" placeholder="Edad" class="form-control" formControlName="age">
-                  </mat-form-field>
-                  <ng-container *ngFor="let validation of validation_messages.age">
-                    <mat-error *ngIf="exampleForm.get('age').hasError(validation.type) && (exampleForm.get('age').dirty || exampleForm.get('age').touched)">{{validation.message}}</mat-error>
-                  </ng-container>
-                </div>
-      
-                <div class="row submit-button-container">
-                  <div class="col-md-4">
-                    <button mat-raised-button class="submit-button" color="primary" type="submit" [disabled]="!exampleForm.valid">Save</button>
-                  </div>
-                  <div class="col-md-4">
-                    <button mat-raised-button class="delete-button" color="warn" type="button" (click)="delete()">Delete</button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
+        
+
+    <div *ngFor="let item of listadoHistorial" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="row">
+        <div class="col col-md-2 image-col">
+          <!-- <img class="image" [src]="item.payload.doc.data().avatar"> -->
         </div>
-      </div> -->
-      
+        <div class="col col-md-8 text-col">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item active" aria-current="page">Datos Personales</li>
+                </ol>
+              </nav>
+          <h5 class="mb-1"> Codigo de Turno</h5>
+          <h5 class="mb-1">Horario </h5>
+          <small    >{{item.uidPaciente}}</small>
+
+          <small>Especialidad: {{item.especialidad}}</small>
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item active" aria-current="page">Datos Laborales</li>
+              <small    >{{item.diaTurno}}</small>
+
+            </ol>
+          </nav>
+          <div class="row" *ngIf="mostrarHistoriaClinica" >
+          
+              <div class="col col-md-12 text-col">
+                  
+                </div>
+                
+              </div>
+          <h5 class="mb-1"> Descripcion</h5>
+          <small    >{{item.descripcion}}</small>
+          <h5 class="mb-1">Horarios</h5>
+
+          <!-- <small>{{item.payload.doc.data().horario}}</small> -->
+    
+        </div>
+        <div class="col col-md-8 text-col">
+          <!-- <h5 class="mb-1">{{item.payload.doc.data().name}} {{item.payload.doc.data().surname}}</h5> -->
+       
+        </div>
+        <div class="col col-md-2 actions-col">
+   
+        </div>
+      </div>
+    </div>
+  </div>
+  
