--- a/src/app/Componentes/turnos-alta/turnos-alta.component.html
+++ b/src/app/Componentes/turnos-alta/turnos-alta.component.html
@@ -189,10 +189,10 @@
     mdbWavesEffect><ion-icon class="icon" name="md-checkmark-circle" ></ion-icon> Crear 
 </button>
 
-
+<!-- 
 <button type="button"   (click)="usuarioes()"   style="  color: white;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
 mdbWavesEffect><ion-icon class="icon" name="md-checkmark-circle" ></ion-icon> usuario
-</button>
+</button> -->
   </div>
 
 
