--- a/src/app/Componentes/habilitar-turnos-recepcion/habilitar-turnos-recepcion.component.html
+++ b/src/app/Componentes/habilitar-turnos-recepcion/habilitar-turnos-recepcion.component.html
@@ -7,19 +7,19 @@
         </nav>
         
 
-    <div *ngFor="let item of turnos" class="list-group-item list-group-item-action flex-column align-items-start">
+    <div *ngFor="let item of listadoTurnosHabilitar" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="row">
-        <div class="col col-md-2 image-col">
+        <!-- <div class="col col-md-2 image-col">
           <img class="image" [src]="item.payload.doc.data().avatar">
-        </div>
-        <div class="col col-md-8 text-col">
+        </div> -->
+        <div class="col col-md-12 text-col">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item active" aria-current="page">Datos Personales</li>
                 </ol>
               </nav>
           <h5 class="mb-1"> Codigo de Turno</h5>
-          <small>{{item.payload.doc.data().name}}</small>
+          <small>{{item.cliente}}</small>
           <h5 class="mb-1">Horario </h5>
 
           <small    >{{item.horaTurno}}</small>
