--- a/src/app/Componentes/ver-turnos-paciente/ver-turnos-paciente.component.html
+++ b/src/app/Componentes/ver-turnos-paciente/ver-turnos-paciente.component.html
@@ -29,12 +29,12 @@
               <li class="breadcrumb-item active" aria-current="page">Datos Laborales</li>
             </ol>
           </nav>
-          <div class="row">
+          <div class="row" *ngIf="mostrarHistoriaClinica" >
           
               <div class="col col-md-12 text-col">
                   <input   maxlength="30" type="text" style="background-color: #c3e6cb;height: 90px;  width:100%" placeholder="Agregue Historia Clinica"   name="historiaClinica" [(ngModel)]="historiaClinica" >
                   
-                  <button class="btn btn-outline-secondary action" style=" font-size:bold; background-color: RED; color: black  "(click)="guardarHistoriaClinica(item.cliente)" type="button">
+                  <button class="btn btn-outline-secondary action" style=" font-size:bold; background-color: RED; color: black  "(click)="guardarHistoriaClinica(item.cliente,item.profesional)" type="button">
                       <ion-icon name="close-circle"></ion-icon>Guardar Reseña
                     </button>
                 </div>
