--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -1,82 +1,100 @@
 <div class="create-page">
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item active" aria-current="page">Registrar Usuario</li>
-    </ol>
-  </nav>
-  <div class="page-content">
-    <div class="row">
-      <!-- <div class="col col-md-4">
-        <img class="img-avatar" src="{{avatarLink}}">
-        <button mat-stroked-button class="change-img-button" color="primary" (click)="openDialog()">Elegir Imagen</button>
-      </div> -->
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item active" aria-current="page">Registrar Usuario</li>
+      </ol>
+    </nav>
+    <div class="page-content">
+      <div class="row">
+        <!-- <div class="col col-md-4">
+          <img class="img-avatar" src="{{avatarLink}}">
+          <button mat-stroked-button class="change-img-button" color="primary" (click)="openDialog()">Elegir Imagen</button>
+        </div> -->
+  
+  
+        <div class="col col-md-8">
+  
+          <form class="create-form" [formGroup]="exampleForm" novalidate (ngSubmit)="onSubmit(exampleForm.value)">
+              
+            <div class="col col-md-4">
 
-      <div class="col col-md-4">
+                  <div class="text-center">
+                      <img   class="img-avatar"  style=" border-radius: 50%;
+                      width: 150px;
+                      display: block;
+                      margin: 20px auto;" [src]="imgSrc" width="350px" height="250px" (click)="fileUploader.click()">
+                    </div>
+                    
+                    <div class="form-group">
+                      <label>Seleccione una imagen para subir</label>
+                      <input type="file" accept="image/*" class="form-control" #fileUploader formControlName="imageUrl"
+                        (change)="showPreview($event)">
+                      <!-- <div class="text-danger" *ngIf="isSubmitted && formControls.imageUrl.errors?.required">This field is required. -->
+                      <!-- </div> -->
+                    </div>
+        
+              </div>
 
-          <div class="text-center">
-              <img formControlName="imageUrl2"    class="img-avatar"  style=" border-radius: 50%;
-              width: 150px;
-              display: block;
-              margin: 20px auto;" [src]="imgSrc" width="350px" height="250px" (click)="fileUploader.click()">
-            </div>
-            <div class="form-group">
-              <label>Seleccione una imagen para subir</label>
-              <input type="file" accept="image/*" class="form-control" #fileUploader formControlName="imageUrl"
-                (change)="showPreview($event)">
-              <!-- <div class="text-danger" *ngIf="isSubmitted && formControls.imageUrl.errors?.required">This field is required. -->
-              <!-- </div> -->
-            </div>
+              <div class="form-group">
+                  <mat-form-field class="input-style">
+                    <input matInput placeholder="Nombre" class="form-control" formControlName="name">
+                  </mat-form-field>
+                  <ng-container *ngFor="let validation of validation_messages.name">
+                    <mat-error *ngIf="exampleForm.get('name').hasError(validation.type) && (exampleForm.get('name').dirty || exampleForm.get('name').touched)">{{validation.message}}</mat-error>
+                  </ng-container>
+                </div>
+      
+                <div class="form-group">
+                  <mat-form-field class="input-style">
+                    <input matInput placeholder="Apellido" class="form-control" formControlName="surname">
+                  </mat-form-field>
+                  <ng-container *ngFor="let validation of validation_messages.surname">
+                    <mat-error *ngIf="exampleForm.get('surname').hasError(validation.type) && (exampleForm.get('surname').dirty || exampleForm.get('surname').touched)">{{validation.message}}</mat-error>
+                  </ng-container>
+                </div>
+      
+                <div class="form-group">
+                  <mat-form-field class="input-style">
+                    <input matInput type="number" min="0" max="100" placeholder="Edad" class="form-control" formControlName="age">
+                  </mat-form-field>
+                  <ng-container *ngFor="let validation of validation_messages.age">
+                    <mat-error *ngIf="exampleForm.get('age').hasError(validation.type) && (exampleForm.get('age').dirty || exampleForm.get('age').touched)">{{validation.message}}</mat-error>
+                  </ng-container>
+                </div>
+                
+                <div class="form-group">
+                    <mat-form-field class="input-style">
+                      <input matInput  placeholder="Email" class="form-control" formControlName="email">
+                    </mat-form-field>
+                    <ng-container *ngFor="let validation of validation_messages.age">
+                      <mat-error *ngIf="exampleForm.get('email').hasError(validation.type) && (exampleForm.get('email').dirty || exampleForm.get('email').touched)">{{validation.message}}</mat-error>
+                    </ng-container>
+                  </div>
+                  
+                  <!-- captcha -->
+                  <div class="col col-md-12 text-col" *ngIf="!mostrarCaptcha">
+                      <h1>{{captcha}}</h1>
+                    <div class="form-group">
+                        <mat-form-field class="input-style">
+                            <input matInput   maxlength="10" placeholder="Ingrese Captcha" [(ngModel)]="inputCaptcha"  class="form-control" formControlName="captcha">
+                          </mat-form-field>
+                          <!-- <input   maxlength="30" type="text" style="background-color: #c3e6cb;height: 90px;  width:50%"   name="historiaClinica" [(ngModel)]="historiaClinica" > -->
+                      
+                          <button class="btn btn-outline-secondary action" style=" font-size:bold; background-color: RED; color: black  "(click)="probarCaptcha()" type="button">
+                              <ion-icon name="close-circle"></ion-icon>Aceptar
+                          </button>
+                    </div>
+                  </div>
+                      <!-- cat -->
 
-      </div>
-
-      <div class="col col-md-8">
-
-        <form class="create-form" [formGroup]="exampleForm" novalidate (ngSubmit)="onSubmit(exampleForm.value)">
-
-          <div class="form-group">
-            <mat-form-field class="input-style">
-              <input matInput placeholder="Nombre" class="form-control" formControlName="name">
-            </mat-form-field>
-            <ng-container *ngFor="let validation of validation_messages.name">
-              <mat-error *ngIf="exampleForm.get('name').hasError(validation.type) && (exampleForm.get('name').dirty || exampleForm.get('name').touched)">{{validation.message}}</mat-error>
-            </ng-container>
-          </div>
-
-          <div class="form-group">
-            <mat-form-field class="input-style">
-              <input matInput placeholder="Apellido" class="form-control" formControlName="surname">
-            </mat-form-field>
-            <ng-container *ngFor="let validation of validation_messages.surname">
-              <mat-error *ngIf="exampleForm.get('surname').hasError(validation.type) && (exampleForm.get('surname').dirty || exampleForm.get('surname').touched)">{{validation.message}}</mat-error>
-            </ng-container>
-          </div>
-
-          <div class="form-group">
-            <mat-form-field class="input-style">
-              <input matInput type="number" min="0" max="100" placeholder="Edad" class="form-control" formControlName="age">
-            </mat-form-field>
-            <ng-container *ngFor="let validation of validation_messages.age">
-              <mat-error *ngIf="exampleForm.get('age').hasError(validation.type) && (exampleForm.get('age').dirty || exampleForm.get('age').touched)">{{validation.message}}</mat-error>
-            </ng-container>
-          </div>
-          
-          <div class="form-group">
-              <mat-form-field class="input-style">
-                <input matInput  placeholder="Email" class="form-control" formControlName="email">
-              </mat-form-field>
-              <ng-container *ngFor="let validation of validation_messages.age">
-                <mat-error *ngIf="exampleForm.get('email').hasError(validation.type) && (exampleForm.get('email').dirty || exampleForm.get('email').touched)">{{validation.message}}</mat-error>
-              </ng-container>
-            </div>
-
-          <div class="row submit-button-container">
-            <div class="col-md-4">
-              <button mat-raised-button class="submit-button" color="primary" type="submit" [disabled]="!exampleForm.valid">Create</button>
-            </div>
-          </div>
-
-        </form>
+                  <div class="col-md-4" *ngIf="mostrarCaptcha">
+                      <button mat-raised-button class="submit-button" color="primary" type="submit" [disabled]="!exampleForm.valid">Create</button>
+                  </div>
+    
+  
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
+  
