--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -211,10 +211,10 @@
 						<!-- <li class="nav-item">
 							<a class="nav-link"  routerLink="listadopacientes">Agregar Reseña</a>
 						  </li> -->
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" routerLink="/TurnosEspecialista">	<ion-icon name="add"></ion-icon>Turnos para paciente
 							</a>
-							</li>
+							</li> -->
 					  </ul>
 					  </div>
 					  <!-- /.col-md-4  -->
