--- a/src/app/Componentes/ver-turnos-paciente/ver-turnos-paciente.component.html
+++ b/src/app/Componentes/ver-turnos-paciente/ver-turnos-paciente.component.html
@@ -7,7 +7,7 @@
         </nav>
         
 
-    <div *ngFor="let item of turnos" class="list-group-item list-group-item-action flex-column align-items-start">
+    <div *ngFor="let item of listadomisTurnos" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="row">
         <div class="col col-md-2 image-col">
           <!-- <img class="image" [src]="item.payload.doc.data().avatar"> -->
