perfeccionando  alta de turnos

--- a/src/app/Componentes/habilitar-turnos-recepcion/habilitar-turnos-recepcion.component.html
+++ b/src/app/Componentes/habilitar-turnos-recepcion/habilitar-turnos-recepcion.component.html
@@ -12,7 +12,7 @@
         <!-- <div class="col col-md-2 image-col">
           <img class="image" [src]="item.payload.doc.data().avatar">
         </div> -->
-        <div class="col col-md-12 text-col">
+        <div class="col col-md-12 text-col" style=" background: rgba(76, 175, 80, 0.3)">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item active" aria-current="page">Datos Personales</li>
