--- a/src/app/Componentes/mis-turnos/mis-turnos.component.html
+++ b/src/app/Componentes/mis-turnos/mis-turnos.component.html
@@ -1,49 +1,57 @@
-<button class="btn btn-outline-primary action"  style="background-color: green;"   (click)="mostrar()" type="button">
-    <ion-icon class="icon" name="arrow-round-forward"></ion-icon>
-    Elegir
-</button>
-             
-            <div class="list-group users-list"    >
-                <div   style="background-color:gray;"*ngFor="let item of listadoespecialistaspordia " class="list-group-item list-group-item-action flex-column align-items-start">
-                  <div class="row"  >
-                   
-                    <div class="col col-md-8 text-col">
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb">
-                              <li class="breadcrumb-item active" aria-current="page">Datos Turnos</li>
-                            </ol>
-                          </nav>
-                      <h5 class="mb-1"> Especialista</h5>
-                      <small>{{item.DiaTurno}}</small>
-                      <small>{{item.cliente}}</small>
-                      <small>{{item.consultorio}}</small>
-                      <small>{{item.estado}}</small>
 
-                      <small>{{item.horaTurno}}</small>
-                      <small>{{item.numTurno}}</small>
-                      <small>{{item.profesional}}</small>
+  <div class="list-group users-list">
+      <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item active" aria-current="page">Turnos Especialista</li>
+          </ol>
+        </nav>
+        
 
+    <div *ngFor="let item of listadomisTurnos" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="row">
+        <div class="col col-md-2 image-col">
+          <!-- <img class="image" [src]="item.payload.doc.data().avatar"> -->
+        </div>
+        <div class="col col-md-8 text-col">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item active" aria-current="page">Datos Personales</li>
+                </ol>
+              </nav>
+          <h5 class="mb-1"> Codigo de Turno</h5>
+          <small>{{item.numTurno}}</small>
+          <h5 class="mb-1">Horario </h5>
 
-                
-                    </div>
+          <small    >{{item.horaTurno}}</small>
+          <small>Especialidad: {{item.especialidad}}</small>
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item active" aria-current="page">Datos Laborales</li>
+            </ol>
+          </nav>
+          <div class="row" *ngIf="mostrarHistoriaClinica" >
+          
+              <div class="col col-md-12 text-col">
+                  <input   maxlength="30" type="text" style="background-color: #c3e6cb;height: 90px;  width:100%" placeholder="Agregue Historia Clinica"   name="historiaClinica" [(ngModel)]="historiaClinica" >
                   
-                    <div class="col col-md-2 actions-col" >
-                      <!-- <button class="btn btn-outline-primary action"  style="background-color: green;"   (click)="viewDetails(item)" type="button">
-                        <ion-icon class="icon" name="arrow-round-forward"></ion-icon>
-                        Elegir
-                      </button> -->
-                    
-                    </div>
-                  </div>
+                  <button class="btn btn-outline-secondary action" style=" font-size:bold; background-color: RED; color: black  "(click)="guardarHistoriaClinica(item.cliente,item.profesional)" type="button">
+                      <ion-icon name="close-circle"></ion-icon>Guardar Reseña
+                    </button>
                 </div>
-            
-             
+                
               </div>
-              <!--Fin listado -->
+          <h5 class="mb-1"> Dias Turno</h5>
+          <!-- <small>{{item.payload.doc.data().DiaTurno}}</small> -->
+          <h5 class="mb-1">Horarios</h5>
 
-     
-
-
+          <!-- <small>{{item.payload.doc.data().horario}}</small> -->
+    
+        </div>
+        <div class="col col-md-8 text-col">
+          <!-- <h5 class="mb-1">{{item.payload.doc.data().name}} {{item.payload.doc.data().surname}}</h5> -->
+       
+        </div>
+      </div>
+    </div>
+  </div>
   
-
-
