--- a/src/app/Componentes/turnos-recepcion/turnos-recepcion.component.html
+++ b/src/app/Componentes/turnos-recepcion/turnos-recepcion.component.html
@@ -13,7 +13,30 @@
           
   
           <form class="create-form" style="   padding: 20px;" [formGroup]="exampleForm" novalidate (ngSubmit)="onSubmit(exampleForm.value)">
-         
+          
+            
+  
+   
+              <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                    <li class="breadcrumb-item active" aria-current="page">Paciente</li>
+                  </ol>
+                </nav>
+                
+              <div class="form-group">
+       
+                  <select placeholder="especialidad"  (change)="filtrarEspecialidad()" [(ngModel)]="especialidades"  class="form-control" formControlName="especialidad"
+                    style="background-color:#007bff;border-radius: 20px;     height: 40px; font-size: 22px; border: none;  color: #fff;  ">
+              
+                    <option *ngFor="let tech of especialidadesTurno " [ngValue]="tech">
+                      {{ tech }}
+                    </option>
+              
+              
+                  </select>
+                </div>
+  
+
               <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item active" aria-current="page">Especialidad</li>
@@ -134,7 +157,7 @@
               <!--mostrar LISTADOFINAL elegido-->
              
             <div class="list-group users-list"    *ngIf="mostrarListadoFinal">
-                <div   style="background-color:red;"*ngFor="let item of listadoFinal " class="list-group-item list-group-item-action flex-column align-items-start">
+                <div   style="background-color:gray"*ngFor="let item of listadoFinal " class="list-group-item list-group-item-action flex-column align-items-start">
                   <div class="row"  >
                     <div class="col col-md-2 image-col">
                       <img class="image"   style="width: 270px;height: 275px;" [src]="item.avatar">
@@ -148,7 +171,7 @@
                       <h5 class="mb-1"> Especialista</h5>
                       <small>{{item.name}}</small>
 
-                
+                     <small> {{item.uidProfesional}}</small> 
                     </div>
                   
                     <div class="col col-md-2 actions-col" >
@@ -156,7 +179,7 @@
                         <ion-icon class="icon" name="arrow-round-forward"></ion-icon>
                         Elegir
                       </button> -->
-                      <button type="button"   (click)="viewDetails(item)"  style="  color: orangered;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+                      <button type="button"   (click)="viewDetails(item)"  style="  color: gray;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
                       mdbWavesEffect><ion-icon class="icon" name="arrow-round-forward"></ion-icon> ELEGIR
                      </button>
                     
@@ -180,15 +203,19 @@
       <!-- <button mat-raised-button class="submit-button" color="primary" type="submit"
        >Crear</button> -->
 
-       <button type="submit"  mat-button   style="  color: white;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+       <!-- <button type="submit"  mat-button   style="  color: white;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
        mdbWavesEffect>
-       <ion-icon class="icon" name="md-checkmark-circle" ></ion-icon>CREAR</button>
+       <ion-icon class="icon" name="md-checkmark-circle" ></ion-icon>CREAR</button> -->
     </div>
 
-    <button type="button"   (click)="datosCliente()"  style="  color: orangered;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
-    mdbWavesEffect><ion-icon class="icon" name="arrow-round-forward"></ion-icon> Datos Cliente
+    <button type="submit"    style="  color: white;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+    mdbWavesEffect><ion-icon class="icon" name="md-checkmark-circle" ></ion-icon> Crear 
 </button>
 
+<!-- 
+<button type="button"   (click)="usuarioes()"   style="  color: white;font-weight: bold;font-size: 33px;   border-radius: 8px !important;padding: .84rem 2.14rem; width: 100%;background: linear-gradient(40deg,#45cafc,#303f9f)!important;" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+mdbWavesEffect><ion-icon class="icon" name="md-checkmark-circle" ></ion-icon> usuario
+</button> -->
   </div>
 
 
