--- a/src/app/Componentes/altas/altas.component.html
+++ b/src/app/Componentes/altas/altas.component.html
@@ -1,3 +1,11 @@
+<ngx-spinner
+bdColor="rgba(51,51,51,0.8)"
+size="medium"
+color="#fff"
+type="ball-scale-multiple"
+>
+<p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
 <div class="create-page" style="    padding: 20px 60px;
 ">
     <nav aria-label="breadcrumb">
