--- a/src/app/Componentes/listado-pacientes/listado-pacientes.component.html
+++ b/src/app/Componentes/listado-pacientes/listado-pacientes.component.html
@@ -1,3 +1,13 @@
+<ngx-spinner
+bdColor="rgba(51,51,51,0.8)"
+size="medium"
+color="#fff"
+type="ball-scale-multiple"
+>
+<p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
+
+
 <div class="row">
     <div class="col-md-4 offset-md-1">
       <div class="input-group">
