--- a/src/app/Componentes/sala-deespera/sala-deespera.component.html
+++ b/src/app/Componentes/sala-deespera/sala-deespera.component.html
@@ -1,3 +1,13 @@
+<ngx-spinner
+bdColor="rgba(51,51,51,0.8)"
+size="medium"
+color="#fff"
+type="ball-scale-multiple"
+>
+<p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
+
+
 <div class="container-fluid">
     <div class="row" style="padding-left: 30px;padding-right: 30px;">
       <div class="col-md-12" style="padding-left: 0px !important;padding-right: 0%!important;">
