--- a/src/app/componentes/login/login.component.css
+++ b/src/app/componentes/login/login.component.css
@@ -33,3 +33,7 @@
       font-weight: 400; }
       .modal-footer {
         font-weight: 400; } */
+        
+        mat-form-field {
+          margin-right: 12px;
+        }
