Calcular Turnos entre fechas. funciona

--- a/src/app/Componentes/contactanos/contactanos.component.html
+++ b/src/app/Componentes/contactanos/contactanos.component.html
@@ -24,6 +24,9 @@
                   <p>
                     <a class="btn btn-primary btn-large"  (click)="TraerDIASEntreFechas()" >calcular dias</a>
                 </p>
+
+                <h1> Cantidad de Turnos: </h1>
+                    <h1> {{ count}}</h1>
                   
 			</div>
 			<ul class="nav nav-pills">
