--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -120,12 +120,13 @@
         <mdb-icon fab icon="twitter"></mdb-icon>
       </button>
 
-      <button type="button" mdbBtn color="white" rounded="true" class="z-depth-1a waves-light"
-              mdbWavesEffect>
-        <mdb-icon fab icon="google-plus"></mdb-icon>
-      </button> -->
+      -->
     </div>
   </div>
+  <button type="button" mdbBtn color="white" rounded="true" class="z-depth-1a waves-light"
+  mdbWavesEffect>
+<mdb-icon fab icon="google-plus"></mdb-icon>
+</button>
 </div>
   
 
