Arreglando bugs turnos

--- a/src/app/Componentes/contactanos/contactanos.component.html
+++ b/src/app/Componentes/contactanos/contactanos.component.html
@@ -1,6 +1,5 @@
 <button class="btn btn-outline-light my-2 my-sm-0"  (click)="openDialog()" type="submit"  *ngIf="userProfile?.perfil == undefined ">Iniciar Sesíon</button>
-<p>{{myVar | date: 'shortDate'}}
-</p>
+<!-- <p>{{myVar | date: 'shortDate'}} -->
 
 <div class="container-fluid">
 	<div class="row">
