--- a/src/app/Componentes/habilitar-turnos-recepcion/habilitar-turnos-recepcion.component.html
+++ b/src/app/Componentes/habilitar-turnos-recepcion/habilitar-turnos-recepcion.component.html
@@ -53,7 +53,7 @@ type="ball-scale-multiple"
           <button class="btn btn-outline-primary action"  style=" background-color: green; color: black " (click)="habilitarTurno(item)" type="button">
             <ion-icon class="icon"  name="checkmark-circle"></ion-icon>Habilitar
           </button>
-          <button class="btn btn-outline-secondary action" style=" background-color: RED; color: black  "(click)="cancelarTurno(item.id)" type="button">
+          <button class="btn btn-outline-secondary action" style=" background-color: RED; color: black  "(click)="cancelarTurno(item)" type="button">
             <ion-icon name="close-circle"></ion-icon>Cancelar
           </button>
         </div>
