Mostrando Mi Historial Clinico

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,7 +81,9 @@
 					<a class="nav-link active"  routerLink="/miPerfil" >Mi Perfil</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link">Historial Clinico</a>
+					<a class="nav-link" routerLink="/MiHistoriaClinica">Historial Clinico</a>
+
+					
 				  </li>
 				</ul>
 				</div>
