--- a/src/app/Componentes/edit-especialista/edit-especialista.component.html
+++ b/src/app/Componentes/edit-especialista/edit-especialista.component.html
@@ -1,7 +1,7 @@
 <div class="edit-page">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item active" aria-current="page">Editar Paciente </li>
+      <li class="breadcrumb-item active" aria-current="page">Editar Especialista </li>
     </ol>
   </nav>
   <div class="page-content">
