--- a/src/app/Componentes/miperfil/miperfil.component.html
+++ b/src/app/Componentes/miperfil/miperfil.component.html
@@ -2,7 +2,7 @@
   <div class="list-group users-list">
       <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item active" aria-current="page"> Mi Historial Clinico</li>
+            <li class="breadcrumb-item active" aria-current="page"> Mi Perfil</li>
           </ol>
         </nav>
         
@@ -55,3 +55,6 @@
     </div>
   </div>
   
+  <button class="btn btn-outline-primary action" (click)="mostrar()" type="button">
+    <ion-icon class="icon" name="arrow-round-forward"></ion-icon>
+  </button>
