--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,9 +77,9 @@
 				<div class="col-md-4">
 				 <span class="text-uppercase text-white" style="font-weight: bold;">Información Personal</span>
 				  <ul class="nav flex-column">
-				  <li class="nav-item">
+				  <!-- <li class="nav-item">
 					<a class="nav-link active"  routerLink="/miPerfil" >Mi Perfil</a>
-				  </li>
+				  </li> -->
 				  <li class="nav-item">
 					<a class="nav-link" routerLink="/MiHistoriaClinica">Historial Clinico</a>
 
